Issue #66: Contact information fieldgroup was too wide
50% was a little too wide for the contact info group. Because of
the padding of both groups, and the "More Like This" block, the
group was being pushed down to the next line.

45% for each group seems to fit a lot nicer here.

--- a/sites/all/themes/slcc_subtheme/css/slcc.css
+++ b/sites/all/themes/slcc_subtheme/css/slcc.css
@@ -284,7 +284,7 @@ a.responsive-menu-button:focus {
   border-left: 1px dotted #CCCCCC;
   float: left;
   text-align: left;
-  width: 50%;
+  width: 45%;
   padding: 0 0 0 20px;
 }
 
